--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <!-- card ends -->
       </div>
       <!-- Sub-Menu Collaps section -->
-      <div class="collapse mt-4" id="collapseSub-menu">
+      <div class="collapse mt-4" id="collapseSub-menu_saree">
         <div class="row  g-4 justify-content-start align-items-start">
           <!-- card -->
           <div class="col-md-3 col-6">
@@ -497,7 +497,7 @@
       <div class="row mt-3 justify-content-end">
         <div class="col-3">
           <button type="button" class="btn btn-outline-primary btn-sm" type="button" data-mdb-toggle="collapse"
-            data-mdb-target="#collapseSub-menu" aria-expanded="false" aria-controls="collapseSub-menu"
+            data-mdb-target="#collapseSub-menu_saree" aria-expanded="false" aria-controls="collapseSub-menu_saree"
             data-mdb-ripple-color="dark">
             View all
           </button>
@@ -675,7 +675,7 @@
         <!-- card ends -->
       </div>
       <!-- Sub-Menu Collaps section -->
-      <div class="collapse mt-4" id="collapseSub-menu">
+      <div class="collapse mt-4" id="collapseSub-menu_salwar">
         <div class="row  g-4 justify-content-start align-items-start">
           <!-- card -->
           <div class="col-md-3 col-6">
@@ -904,7 +904,7 @@
       <div class="row mt-3 justify-content-end">
         <div class="col-3">
           <button type="button" class="btn btn-outline-primary btn-sm " type="button" data-mdb-toggle="collapse"
-            data-mdb-target="#collapseSub-menu" aria-expanded="false" aria-controls="collapseSub-menu"
+            data-mdb-target="#collapseSub-menu_salwar" aria-expanded="false" aria-controls="collapseSub-menu_salwar"
             data-mdb-ripple-color="dark">
             View all
           </button>
