--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
       <!-- Sub-Menu Collaps button -->
       <div class="row mt-3 justify-content-end">
         <div class="col-3">
-          <button type="button" class="btn btn-outline-primary btn-sm" type="button" data-mdb-toggle="collapse"
+          <button type="button" class="btn btn-outline-light btn-sm" type="button" data-mdb-toggle="collapse"
             data-mdb-target="#collapseSub-menu_saree" aria-expanded="false" aria-controls="collapseSub-menu_saree"
             data-mdb-ripple-color="dark">
             View all
@@ -675,7 +675,7 @@
         <!-- card ends -->
       </div>
       <!-- Sub-Menu Collaps section -->
-      <div class="collapse mt-4" id="collapseSub-menu_salwar">
+      <div class="collapse mt-4" id="salwar">
         <div class="row  g-4 justify-content-start align-items-start">
           <!-- card -->
           <div class="col-md-3 col-6">
@@ -904,8 +904,8 @@
       <div class="row mt-3 justify-content-end">
         <div class="col-3">
           <button type="button" class="btn btn-outline-primary btn-sm " type="button" data-mdb-toggle="collapse"
-            data-mdb-target="#collapseSub-menu_salwar" aria-expanded="false" aria-controls="collapseSub-menu_salwar"
-            data-mdb-ripple-color="dark">
+            data-mdb-target="#salwar" aria-expanded="false" aria-controls="salwar"
+            data-mdb-ripple-color="light">
             View all
           </button>
         </div>
